--- a/src/template.html
+++ b/src/template.html
@@ -2,8 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<meta charset="utf-8" />
 		<meta name="viewport" value="width=device-width, initial-scale=1" />
-		<title>Github Jobs App</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Git Jobs </title>
 	</head>
 	<body>
 		<div id="root"></div>
