--- a/src/template.html
+++ b/src/template.html
@@ -3,10 +3,11 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" value="width=device-width, initial-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Github Jobs App</title>
 	</head>
 	<body>
 		<div id="root"></div>
-		
+
 	</body>
 </html>
